--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tela de Login</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tela de Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="container">
-  <h2>Faça login para Acessar o Sistema</h2>
-  
-  <div class="login-box">
-  <h3>Login</h3>
-  <form>
-    <label for="email">Email:</label>
-    <input type="email" id="email" placeholder="Digite seu email">
+        <h2>Faça Login para Acessar o Sistema</h2>
 
-    <label for="senha">Senha:</label>
-    <input type="password" id="senha" placeholder="Digite sua senha">
+        <div class="login-box">
+            <h3>
+                Login
+            </h3>
 
-    <button type="submit">Login</button>
-  </form>
-</div>
+            <form >
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="Email" placeholder="Digite seu email">
+
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" name="Senha" placeholder="Digite sua senha">
+
+                <button type="submit" aria-label="Entrar no sistema">Login</button>
 
 
-</div>
 
+
+            </form>
+
+
+        </div>
+
+    </div>
 
 </body>
 </html>
